# airzone-api

./: .gitignore  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260329_0001_create_users_and_sessions.py  20260329_0002_add_location_search_cache.py
backend/app/: __init__.py  main.py
backend/app/api/: aircraft.py  auth.py  dependencies.py  locations.py  routes.py  system.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  geocode_cache.py  session.py  user.py
backend/app/schemas/: aircraft.py  auth.py  location.py
backend/app/scripts/: __init__.py  seed_demo_user.py
backend/app/services/: aircraft_search.py  auth.py  cache.py  geo.py  geocoding.py
backend/app/services/providers/: adsbdb.py  aviationstack.py  opensky.py
backend/tests/: conftest.py  test_aircraft_search.py  test_auth.py  test_geo.py  test_health.py  test_locations.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/features/auth/: AuthProvider.tsx  api.ts
frontend/src/features/search/: api.ts  useDebouncedValue.ts
frontend/src/lib/: api.ts
frontend/src/pages/: AuthPage.tsx  DashboardPage.tsx  LoginPage.tsx  SignupPage.tsx
frontend/src/test/: auth.test.tsx
